Use script for mtime

--- a/template/blog/default.html
+++ b/template/blog/default.html
@@ -21,7 +21,7 @@
 
         <main>
             <h2>{{!!title!!}}</h2>
-            <p><i>Last updated:</i> {{!!mtime!!}}</p>
+            <p><i>Last updated:</i> {{^^bin/last_updated.sh^^}}</p>
             <p><b>This is a blog entry whose template is in <tt>template/blog/default.html</tt>. <tt>cyc</tt> can apply templates from subdirectories that correspond to the structure of <tt>content/</tt>.</b></p>
             
             {{!!body!!}}
