--- a/template/default.html
+++ b/template/default.html
@@ -24,7 +24,7 @@
         </main>
 
         <footer>
-            <p><i>Last updated:</i> {{!!mtime!!}}</p>
+            <p><i>Last updated:</i> {{^^bin/last_updated.sh^^}}</p>
 
             {{##footer.html##}}
         </footer>
