--- a/template/blog/default.html
+++ b/template/blog/default.html
@@ -5,8 +5,9 @@
 
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta name="generator" content="cyc"/>
-        <link rel="stylesheet" type="text/css" media="screen" href="{{##.slab##}}/style.css" />
+        <meta name="generator" content="cyc">
+        <link rel="stylesheet" type="text/css" media="screen" href="{{##.slab##}}/style.css">
+        <link rel="alternate" type="application/rss+xml" title="RSS feed" href="rss.xml">
     </head>
     <body>
         <header>
